Split context state change item appending out of DisplayList::Recorder::canAppendItemOfType. https://bugs.webkit.org/show_bug.cgi?id=225424

Reviewed by Simon Fraser.

It's non-obvious from the name that canAppendItemOfType can also end
up appending an item.  So let's split out the context state change
item out into a separate function.

* platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::Recorder::canAppendItemOfType):
(WebCore::DisplayList::Recorder::appendStateChangeItemIfNecessary):
Added.
* platform/graphics/displaylists/DisplayListRecorder.h:
(WebCore::DisplayList::Recorder::append):
(WebCore::DisplayList::Recorder::itemNeedsState): Added this as a
constexpr helper function, to ensure we make a decision about needing
to call appendStateChangeItemIfNecessary at compile time.


Canonical link: https://commits.webkit.org/237378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277075 268f45cc-cd09-0410-ab3c-d52691b4dbfc